Positioned image on todo page

--- a/todo.html
+++ b/todo.html
@@ -34,14 +34,23 @@
 <h2>
     What to do in Edinburgh?
 </h2>
-<p>There are endless activities to do in Edinburgh. This page could not even list them all as there is so much! The main activites are listed below</p>
-        <div class="to-do-text">
-            <h3>Edinburgh festival</h3>
-            <p>Edinburgh festival happens every august and host a host of theatre, comedy and circus performances. The city is full of creative energy every august because of this where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
-        </div>
-<img href="assets/images/performance.jpg" alt="Performance">
-   
-    <p>On the subject of food - Edinburgh has many multicultural resturants offering malaysian, indian, nepalese, japanese, scottish and many more! </p>
+<p>There are endless activities to do in Edinburgh. This page could not even list them all as there is so much!</p>
+
+<div id="edfest">
+    <div class="to-do-text">
+        <h3>Edinburgh festival</h3>
+        <p>Edinburgh festival happens every august and host a host of theatre, comedy and circus performances. The city is full of creative energy every august because of this where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+    </div>
+</div>
+
+<div id="food">
+    <div class="to-do-text">
+        <h3>Food</h3>
+        <p>On the subject of food - Edinburgh has many multicultural resturants offering malaysian, indian, nepalese, japanese, scottish and many more!</p>
+    </div>
+    <img src=".../images/sushi.jpg">
+</div>
+    
     <p>Take a walk up arthurs seat - a hill located in the newington area of the city</p>
     <p>Take a walk on the beautiful pentland hills just outside of Edinburgh for a more intense walking experience - the stunning view from the top are to die for!</p>
     <p>Why not take a walk down to the treny Leith area (make sure to visit the beautiful shore area in Leith!</p>
