--- a/todo.html
+++ b/todo.html
@@ -55,4 +55,21 @@
     <p>Take a trip down to Dean village - an absolutely georgous village off the water of leith - it's a must see</p>
 
 </body>
+<section> 
+    <footer id="social-media">
+        <h3>Catch us on social media for more info</h3>
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank">Facebook</a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank">Twitter</a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank">Instagram</a>
+            </li>
+        </ul>
+    
+    </footer>
+</section>
 </html>
