--- a/todo.html
+++ b/todo.html
@@ -10,27 +10,27 @@
     <title>Edinburgh travel</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul id="menu">
-               
-                <li>
-                    <a href="tostay.html">Places to stay</a> 
-                </li>
-              
-                <li>
-                    <a href="travel.html">Travel advice</a>  
-                </li>
-                <li>
-                    <a href="todo.html">What's on?</a> 
-                </li>
-                <li>
-                    <a href="html.index">Home</a> 
-                </li>
-            </ul>
-        </nav>
-        <h1>Love Edinburgh</h1>
-    </header>
+    <section>
+        <header>
+                <nav>
+                    <ul id="menu">
+                        <li>
+                            <a href="newsletter.html">Newsletter</a> 
+                        </li>
+                        <li>
+                            <a href="travel.html">Travel advice</a>  
+                        </li>
+                        <li>
+                            <a href="todo.html">What's on?</a> 
+                        </li>
+                        <li>
+                            <a href="index.html">Home</a> 
+                        </li>
+                    </ul>
+                </nav>
+                <h1>Love Edinburgh</h1>
+            </header>
+            </section>
 <h2>
     There are endless activities to do in Edinburgh. This page could not even list them all as there is so much!
 </h2>
