--- a/newsletter.html
+++ b/newsletter.html
@@ -32,8 +32,10 @@
             </header>
             </section>
 <section>
-    <form id="form">
-        <h3>Sign up to our newsletter for weekly updates on events in Edinburgh</h3>
+    <div id="form-image">
+        <div id="text-box">
+    <form>
+        <h4 id="form-heading">Sign up to our newsletter for weekly updates on events in Edinburgh</h4>
         <label for="fname">First name</label>
         <input type="text" id="fname">
         <br>
@@ -45,6 +47,8 @@
         <br>
         <input type="submit">
     </form>
+</div>
+</div>
 </section>
 </body>
 <section> 
