--- a/todo.html
+++ b/todo.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Edinburgh travel and entertainment advice">
     <meta name="keywords" content="edinburgh, scotland, travel, events">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
     <title>Edinburgh travel</title>
 </head>
 <body>
@@ -56,17 +57,17 @@
 
 </body>
 <section> 
-    <footer id="social-media">
+    <footer class="social-media">
         <h3>Catch us on social media for more info</h3>
         <ul>
             <li>
-                <a href="http://facebook.com" target="_blank">Facebook</a>
+                <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="http://twitter.com" target="_blank">Twitter</a>
+                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"></a><i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="http://instagram.com" target="_blank">Instagram</a>
+                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"></a><i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     
