Added to content to travel.html

--- a/newsletter.html
+++ b/newsletter.html
@@ -51,7 +51,7 @@
 </div>
 </div>
 </section>
-</body>
+
 <section> 
     <footer class="social-media">
         <h3>Catch us on social media for more info</h3>
@@ -60,13 +60,14 @@
                 <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"></a><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"></a><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     
     </footer>
 </section>
+</body>
 </html>
