--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
         </li>
         <li>
-            <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"></a><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"><i class="fa-brands fa-square-twitter"></i></a>
         </li>
         <li>
-            <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"></a><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
         </li>
     </ul>
 </footer>
