--- a/todo.html
+++ b/todo.html
@@ -55,7 +55,7 @@
     <p>Why not take a walk down to the treny Leith area (make sure to visit the beautiful shore area in Leith!</p>
     <p>Take a trip down to Dean village - an absolutely georgous village off the water of leith - it's a must see</p>
 
-</body>
+
 <section> 
     <footer class="social-media">
         <h3>Catch us on social media for more info</h3>
@@ -64,13 +64,14 @@
                 <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"></a><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"></a><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     
     </footer>
 </section>
+</body>
 </html>
