--- a/todo.html
+++ b/todo.html
@@ -22,7 +22,13 @@
                             <a href="travel.html">Travel advice</a>  
                         </li>
                         <li>
-                            <a href="todo.html">What's on?</a> 
+                            <a href="#">Drink</a>  
+                        </li>
+                        <li>
+                            <a href="#">Eat</a>  
+                        </li>
+                        <li>
+                            <a href="todo.html">Events</a> 
                         </li>
                         <li>
                             <a href="index.html">Home</a> 
