--- a/newsletter.html
+++ b/newsletter.html
@@ -44,15 +44,15 @@
     <form>
         <h4 id="form-heading">Sign up to our newsletter for weekly updates on events in Edinburgh</h4>
         <label for="fname">First name</label>
-        <input type="text" id="fname">
+        <input type="text" id="fname" name="fname">
         <br>
         <label for="lname">Last name</label>
-        <input type="text" id="fname">
+        <input type="text" id="fname" name="lname">
         <br>
         <label for="email">Email address</label>
-        <input type="email" id="email">
+        <input type="email" id="email" name="email">
         <br>
-        <input type="submit">
+        <input type="submit" value="Submit">
     </form>
 </div>
 </div>
