Addition of content to eat page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#">Drink</a>  
                 </li>
                 <li>
-                    <a href="#">Eat</a>  
+                    <a href="eat.html">Eat</a>  
                 </li>
                 <li>
                     <a href="todo.html">Events</a> 
@@ -40,7 +40,10 @@
     </section>
     
 <section>
-    <div id="hero-image">
+    <span alt="View of Edinburgh with clock tower in sight">
+        <div id="hero-image">
+    </span>
+  
         <div id="intro-text">
             <h3>Why visit Edinburgh?</h3>
             <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups</p>
