--- a/newsletter.html
+++ b/newsletter.html
@@ -22,7 +22,7 @@
                             <a href="travel.html">Travel advice</a>  
                         </li>
                         <li>
-                            <a href="#">Eat</a>  
+                            <a href="eat.html">Eat</a>  
                         </li>
                         <li>
                             <a href="#">Drink</a>  
@@ -39,7 +39,9 @@
             </header>
             </section>
 <section>
-    <div id="form-image">
+    <span alt="View of dance festival crowd with DJ hand in the air">
+        <div id="form-image">
+    </span>
         <div id="text-box">
     <form>
         <h4 id="form-heading">Sign up to our newsletter for weekly updates on events in Edinburgh</h4>
