--- a/todo.html
+++ b/todo.html
@@ -25,7 +25,7 @@
                             <a href="#">Drink</a>  
                         </li>
                         <li>
-                            <a href="#">Eat</a>  
+                            <a href="eat.html">Eat</a>  
                         </li>
                         <li>
                             <a href="todo.html">Events</a> 
@@ -38,15 +38,29 @@
                 <h1>Love Edinburgh</h1>
             </header>
             </section>
-<h2>
+<h3>
     There are endless activities to do in Edinburgh. This page could not even list them all as there is so much!
-</h2>
+</h3>
 
+<span aria-label="Women performing in dance show">
 <div id="edfest">
     <div class="to-do-text">
-        <h3>Edinburgh festival</h3>
+        <h3>Edinburgh Festival Fringe</h3>
         <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
     </div>
+</div>
+</span>
+
+<div class="to-do-text">
+    <h3>Edinburgh international film festival</h3>
+    <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+</div>
+</div>
+
+<div class="to-do-text">
+    <h3>Edinburgh festival</h3>
+    <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+</div>
 </div>
 
 <div id="food">
