Image positioning on eat page

--- a/eat.html
+++ b/eat.html
@@ -39,14 +39,15 @@
             </header>
             </section>
 `<section> 
+    <div id="chef-cooking-image">
+        <img src="assets/images/chef-cooking.jpg" alt="Chef cooking curry in resturant kitchen">
+    </div>
     <div id="food-text">
         <h3>Food and drink</h3>
         <p>Edinburgh has many resturants providing cuisines from all over the world. Our recommendations include...</p>
         <h4>Mother india</h4>
         <p></p>
-        <div id="chef-cooking-image">
-            <img src="assets/images/chef-cooking.jpg" alt="Chef cooking curry in resturant kitchen" height="25%">
-        </div>
+        
         <h4>Kampung ali</h4>
         <p></p>
         <h4>The ship on the shore</h4>
