Further content to eat page and image positioning

--- a/eat.html
+++ b/eat.html
@@ -39,25 +39,22 @@
             </header>
             </section>
 `<section> 
-    <div id="chef-cooking-image">
-        <img src="assets/images/chef-cooking.jpg" alt="Chef cooking curry in resturant kitchen">
-    </div>
+    <div id="chef-cooking-image" role="img" aria-label="Chef cooking curry in resturant">
     <div id="food-text">
         <h3>Food and drink</h3>
         <p>Edinburgh has many resturants providing cuisines from all over the world. Our recommendations include...</p>
         <h4>Mother india</h4>
-        <p></p>
-        
+        <p>Mother india is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
         <h4>Kampung ali</h4>
-        <p></p>
+        <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. Like mother india this wee gem is located in the Newington area of Edinburgh.</p>
         <h4>The ship on the shore</h4>
-        <p></p>
+        <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood.</p>
         <h4>Stack Dim Sum bar</h4>
-        <p></p>
-        <h4>Chop Chop</h4>
-        <p></p>
+        <p>This discrete unstated resturant is located in the leith area of Edinburgh. It offers some of the best dim sum in town - be sure to book before as it is a small resturant.</p>
+        <h4>The dragonfly</h4>
+        <p>Fancy a cocktail? Head down to the dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novilities like coconut rum cocktails topped with soft margue</p>
     </div>
-   
+</div>
 </section>
 
 <section> 
