--- a/eat.html
+++ b/eat.html
@@ -22,10 +22,7 @@
                             <a href="travel.html">Travel advice</a>  
                         </li>
                         <li>
-                            <a href="#">Eat</a>  
-                        </li>
-                        <li>
-                            <a href="#">Drink</a>  
+                            <a href="eat.html">Eat+Drink</a>  
                         </li>
                         <li>
                             <a href="todo.html">Events</a> 
@@ -40,25 +37,24 @@
             </section>
 `<section> 
     <div id="chef-cooking-image" role="img" aria-label="Chef cooking curry in resturant">
+   <div id="food-container">
     <div id="food-text">
         <h3>Food and drink</h3>
         <p>Edinburgh has many resturants providing cuisines from all over the world. Our recommendations include...</p>
         <h4>Mother india</h4>
         <p>Mother india is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
         <h4>Kampung ali</h4>
-        <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. Like mother india this wee gem is located in the Newington area of Edinburgh.</p>
+        <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like mother india, this wee gem is located in the Newington area of Edinburgh.</p>
         <h4>The ship on the shore</h4>
-        <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood.</p>
-        <h4>Stack Dim Sum bar</h4>
-        <p>This discrete unstated resturant is located in the leith area of Edinburgh. It offers some of the best dim sum in town - be sure to book before as it is a small resturant.</p>
+        <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters.</p>
         <h4>The dragonfly</h4>
         <p>Fancy a cocktail? Head down to the dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novilities like coconut rum cocktails topped with soft margue</p>
     </div>
+   </div> 
 </div>
 </section>
-
 <section> 
-    <footer class="social-media">
+    <footer class="social-media" id="social-media-eat">
         <h3>Catch us on social media for more info</h3>
         <ul>
             <li>
