Positioing of elements on events page

--- a/todo.html
+++ b/todo.html
@@ -39,34 +39,28 @@
     There are endless activities to do in Edinburgh. This page could not even list them all as there is so much!
 </h3>
 
-<span aria-label="Women performing in dance show">
-<div id="edfest">
-    <div class="to-do-text">
+<div id="edfest" role="img" aria-label="Women performing in dance show">
+    <div class="to-do-fringe">
         <h3>Edinburgh Festival Fringe</h3>
         <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
     </div>
-</div>
-</span>
-
-<div class="to-do-text">
+    
+<div class="to-do-film">
     <h3>Edinburgh international film festival</h3>
-    <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
-</div>
+    <p>Edinburgh international film festival happens every august and hosts a wealth of avante garde films from independent film makers. It's a must see!</p>
 </div>
 
-<div class="to-do-text">
+<div class="to-do-text3">
     <h3>Edinburgh festival</h3>
     <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
 </div>
 </div>
+
 </div>
-    
-    <p>Take a walk up arthurs seat - a hill located in the newington area of the city</p>
-    <p>Take a walk on the beautiful pentland hills just outside of Edinburgh for a more intense walking experience - the stunning view from the top are to die for!</p>
-    <p>Why not take a walk down to the treny Leith area (make sure to visit the beautiful shore area in Leith!</p>
-    <p>Take a trip down to Dean village - an absolutely georgous village off the water of leith - it's a must see</p>
 
 
+</div>
+</div>
 <section> 
     <footer class="social-media">
         <h3>Catch us on social media for more info</h3>
