--- a/travel.html
+++ b/travel.html
@@ -22,10 +22,7 @@
                             <a href="travel.html">Travel advice</a>  
                         </li>
                         <li>
-                            <a href="#">Drink</a>  
-                        </li>
-                        <li>
-                            <a href="#">Eat</a>  
+                            <a href="eat.html">Eat+Drink</a>  
                         </li>
                         <li>
                             <a href="todo.html">Events</a> 
