Positioned div elements in travel page

--- a/eat.html
+++ b/eat.html
@@ -36,11 +36,10 @@
             </header>
             </section>
 `<section> 
+    <h3>Food and drink in Edinburgh</h3>
     <div id="chef-cooking-image" role="img" aria-label="Chef cooking curry in resturant">
    <div id="food-container">
     <div id="food-text">
-        <h3>Food and drink</h3>
-        <p>Edinburgh has many resturants providing cuisines from all over the world. Our recommendations include...</p>
         <h4>Mother india</h4>
         <p>Mother india is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
         <h4>Kampung ali</h4>
