--- a/todo.html
+++ b/todo.html
@@ -36,7 +36,7 @@
             </header>
             </section>
 <h3>
-    There are endless activities to do in Edinburgh. This page could not even list them all as there is so much!
+    There are endless activities to do in Edinburgh. The key ones are listed below...
 </h3>
 
 <div id="edfest" role="img" aria-label="Women performing in dance show">
