Addition of div element containing home text

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   
         <div id="intro-text">
             <h3>Why visit Edinburgh?</h3>
-            <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups</p>
-            <p>It is the capital of scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world</p>
+            <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups
+            It is the capital of scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world</p>
         </div>
     </div>
 </section>
