--- a/newsletter.html
+++ b/newsletter.html
@@ -36,9 +36,7 @@
             </header>
             </section>
 <section>
-    <span alt="View of dance festival crowd with DJ hand in the air">
-        <div id="form-image">
-    </span>
+        <div id="form-image" role="img" aria-label="View of dance festival crowd with DJ hand in the air">
         <div id="text-box">
     <form>
         <h4 id="form-heading">Sign up to our newsletter for weekly updates on events in Edinburgh</h4>
