Added hover effects to navigation and div elements on events page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     </section>
     
 <section>
-    <span alt="View of Edinburgh with clock tower in sight">
-        <div id="hero-image">
-    </span>
-  
+        <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
         <div id="intro-text">
             <h3>Why visit Edinburgh?</h3>
             <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups
