--- a/eat.html
+++ b/eat.html
@@ -37,17 +37,22 @@
             </section>
 `<section> 
     <h3>Food and drink in Edinburgh</h3>
-    <div id="chef-cooking-image" role="img" aria-label="Chef cooking curry in resturant">
-   <div id="food-container">
+    <!-- <div id="chef-cooking-image" role="img" aria-label="Chef cooking curry in resturant"> -->
+        <div id="food-container">
+            <img id="laska-img" src="assets/images/laska.jpg" alt="Laska soup">
+            <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
+            <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
+            <!-- <img id="cocktails-img" src="assets/images/cocktails.jpg" alt="Two cocktails placed on a bar"> -->
+            </div>
     <div id="food-text">
         <h4>Mother india</h4>
         <p>Mother india is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
         <h4>Kampung ali</h4>
         <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like mother india, this wee gem is located in the Newington area of Edinburgh.</p>
         <h4>The ship on the shore</h4>
-        <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters.</p>
+        <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the shore at leith.</p>
         <h4>The dragonfly</h4>
-        <p>Fancy a cocktail? Head down to the dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novilities like coconut rum cocktails topped with soft margue</p>
+        <p>Fancy a cocktail? Head down to the dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novelties like coconut rum cocktails topped with soft meringue</p>
     </div>
    </div> 
 </div>
