--- a/newsletter.html
+++ b/newsletter.html
@@ -37,7 +37,7 @@
             </section>
 <section>
         <div id="form-image" role="img" aria-label="View of dance festival crowd with DJ hand in the air">
-        <div id="text-box">
+        <div id="form-text-container">
     <form>
         <h4 id="form-heading">Sign up to our newsletter for weekly updates on events in Edinburgh</h4>
         <label for="fname">First name</label>
