Changes to text content of site and addition of link to page h1 element

--- a/eat.html
+++ b/eat.html
@@ -32,7 +32,7 @@
                         </li>
                     </ul>
                 </nav>
-                <h1>Love Edinburgh</h1>
+                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
 `<section> 
@@ -45,21 +45,21 @@
             <!-- <img id="cocktails-img" src="assets/images/cocktails.jpg" alt="Two cocktails placed on a bar"> -->
             </div>
     <div id="food-text">
-        <h4>Mother india</h4>
-        <p>Mother india is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
-        <h4>Kampung ali</h4>
-        <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like mother india, this wee gem is located in the Newington area of Edinburgh.</p>
-        <h4>The ship on the shore</h4>
+        <h4>Mother India</h4>
+        <p>Mother India is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
+        <h4>Kampong Ah Lee</h4>
+        <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
+        <h4>The Ship on The Shore</h4>
         <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the shore at leith.</p>
-        <h4>The dragonfly</h4>
-        <p>Fancy a cocktail? Head down to the dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novelties like coconut rum cocktails topped with soft meringue</p>
+        <h4>The Dragonfly</h4>
+        <p>Fancy a cocktail? Head down to The Dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novelties like coconut rum cocktails topped with soft meringue</p>
     </div>
    </div> 
 </div>
 </section>
 <section> 
     <footer class="social-media" id="social-media-eat">
-        <h3>Catch us on social media for more info</h3>
+        <h3>Connect with us on social media for live updates on events and offers</h3>
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
