--- a/todo.html
+++ b/todo.html
@@ -32,7 +32,7 @@
                         </li>
                     </ul>
                 </nav>
-                <h1>Love Edinburgh</h1>
+                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
 <h3>
