--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <h1>Love Edinburgh</h1>
+        <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
     </header>
     </section>
     
@@ -40,8 +40,8 @@
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
         <div id="intro-text">
             <h3>Why visit Edinburgh?</h3>
-            <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups
-            It is the capital of scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world</p>
+            <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups.
+            It is the capital of scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world. Love Edinburgh is here to provide recommendations of the best resturants and events to attend in Edinburgh.</p>
         </div>
     </div>
 </section>
@@ -52,7 +52,7 @@
 </section>
 <section> 
 <footer class="social-media">
-    <h3>Catch us on social media for more info</h3>
+    <h3>Connect with us on social media for live updates on events and offers</h3>
     <ul>
         <li>
             <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
