--- a/newsletter.html
+++ b/newsletter.html
@@ -32,14 +32,14 @@
                         </li>
                     </ul>
                 </nav>
-                <h1>Love Edinburgh</h1>
+                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
 <section>
         <div id="form-image" role="img" aria-label="View of dance festival crowd with DJ hand in the air">
         <div id="form-text-container">
     <form>
-        <h4 id="form-heading">Sign up to our newsletter for weekly updates on events in Edinburgh</h4>
+        <h4 id="form-heading">Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh</h4>
         <label for="fname">First name</label>
         <input type="text" id="fname" name="fname">
         <br>
@@ -57,7 +57,7 @@
 
 <section> 
     <footer class="social-media">
-        <h3>Catch us on social media for more info</h3>
+        <h3>Connect with us on social media for live updates on events and offers</h3>
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
