--- a/travel.html
+++ b/travel.html
@@ -32,7 +32,7 @@
                         </li>
                     </ul>
                 </nav>
-                <h1>Love Edinburgh</h1>
+                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
             <section>
@@ -52,7 +52,7 @@
             
 <section> 
     <footer class="social-media">
-        <h3>Catch us on social media for more info</h3>
+        <h3>Connect with us on social media for live updates on events and offers</h3>
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
