--- a/todo.html
+++ b/todo.html
@@ -42,7 +42,7 @@
 <div id="edfest" role="img" aria-label="Women performing in dance show">
     <div id="to-do-fringe">
         <h3>Edinburgh Festival Fringe</h3>
-        <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every August where performers and tourists travels all over the world to perform or see over 4000 plus shows in the city. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+        <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every August where performers and tourists travels all over the world to perform or see over 4000 plus shows in the city.</p>
     </div>
     
 <div id="to-do-film">
