Positional changes to elements on eat page

--- a/eat.html
+++ b/eat.html
@@ -42,6 +42,10 @@
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
             </div>
     <div id="food-text">
+        <h4>The Ship on the Shore</h4>
+        <p>The Ship on the Shore offers the best of Scottish seafood. It has an excellent wine and champagne selection so you can enjoy a glass with your oysters by the water.</p>
+        <h4>The Dragonfly</h4>
+        <p>Fancy a cocktail? Why not head down to The Dragonfly which serves many of the old classics such as espresso martini or novelities such as rum cocktails topped with italian meringue.</p>
         <h4>Mother India</h4>
         <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
         <h4>Kampong Ah Lee</h4>
