Addition of travel-container

--- a/travel.html
+++ b/travel.html
@@ -35,7 +35,7 @@
                 <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
-            <section>
+            <section id="travel-container">
                 <div id="edin-travel" role="img" aria-label="Edinburgh view from princes street with pedestrians and bus in background">
                     <div id="travel-div">
                         <div id="travel-text">
